--- a/WoWLoginScreens/index.html
+++ b/WoWLoginScreens/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset=utf-8 />
-        <title>Another Dumb Meme</title>
+        <title>WoW Login Screens Meme</title>
         <link rel="stylesheet" href="assets/css/styles.css">
         <script src="assets/js/audiohandler.js" type="text/javascript"></script>
     </head>
@@ -71,8 +71,8 @@
             <div class="fullScreen">
                 <div class="centered">
                     <video autoplay muted="true" loop id="background">
-                        <source src="assets/img/bg/WrathOfTheLichKing.webm" type="video/webm">
-                        <source src="assets/img/bg/Wrathofthelichking.mp4" type="video/mp4">
+                        <source src="assets/img/bg/WrathOfTheLichKingClassic.webm" type="video/webm">
+                        <source src="assets/img/bg/WrathOfTheLichKingClassic.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
