variant en lang

--- a/WoWLoginScreens/index_en.html
+++ b/WoWLoginScreens/index_en.html
@@ -4,7 +4,7 @@
         <meta charset=utf-8 />
         <title>WoW Login Screens Meme</title>
         <link rel="stylesheet" href="assets/css/styles.css">
-        <script src="assets/js/audiohandler.js" type="text/javascript"></script>
+        <script src="assets/js/audiohandler_en.js" type="text/javascript"></script>
     </head>
     <body onload="init();">
         <div class="noSelect">
